# axum-server

./: .env  .gitignore  Cargo.toml  README.md
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2023-02-17-010952_users/: up.sql
migrations/2023-02-17-012716_todos/: up.sql
src/: actions.rs  main.rs  models.rs  schema.rs
