[package]
name = "axum-intro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.6"
hyper = { version = "0.14.24", features = ["full"] }
serde = {version = "1.0.152", features = ["derive"]}
tokio = { version = "1.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["trace"] }
diesel = {version = "2.0.0", features =  ["postgres","r2d2"]}
dotenvy = "0.15.6"
