[package]
name = "axum-intro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.6"
hyper = { version = "0.14.24", features = ["full"] }
serde = {version = "1.0.152", features = ["derive"]}
tokio = { version = "1.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-futures = { version = "0.2.5", features = ["tokio","tokio-executor"] }
diesel = {version = "2.0.0", features =  ["postgres","r2d2"]}
dotenvy = "0.15.6"
chrono = "0.4.23"

